<resources>
    <string name="app_name">SchoolReport</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="laporan_ibadah">Laporan Ibadah</string>
    <string name="greetings">Assalamualaikum, 
Ichwan Sholihin</string>
    <string name="nisn_nip">NISN/NIP</string>
    <string name="nama">Nama</string>
    <string name="login">Login</string>
    <string name="butuh_bantuan">Butuh bantuan?</string>
    <string name="cari_nama_siswa">Cari nama siswa</string>
    <string name="laporan_ananda_ichwan_sholihin">Laporan Ananda %1$s</string>
    <string name="juli_2025">Juli 2025</string>
    <string name="pekan_1">Pekan 1</string>
    <string name="pekan_4">Pekan 4</string>
    <string name="pekan_2">Pekan 2</string>
    <string name="pekan_3">Pekan 3</string>
    <string name="laporan_ibadah_harian">Laporan Ibadah Harian</string>
    <string name="_7x">7x</string>
    <string name="lihat_laporan_sebelumnya"><![CDATA[Lihat laporan sebelumnya ->]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="penilaian_pekan_ini">Penilaian pekan ini</string>
    <string name="a">A</string>
    <string name="password">Password</string>
    <string name="buat_target_capaian">Buat Target Capaian</string>
    <string name="kategori_capaian">Kategori Capaian</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="kategori_capaian_tx">Kategori Capaian</string>
    <string name="capaian_untuk_kelas">Capaian untuk kelas</string>
    <string name="jenis_jawaban">Jenis Jawaban</string>
    <string name="ceklis">Ceklis</string>
    <string name="teks">Teks</string>
    <string name="simpan">Simpan</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="nip_nisn">NIP/NISN</string>
    <string name="class_room">Class Room</string>
    <string name="roles">Roles</string>
    <string name="gender">Gender</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="nama_kategori_baru">Nama Kategori Baru</string>
    <string name="kelas">Kelas</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jawaban">Jawaban</string>
    <string name="siswa">Siswa</string>
    <string name="guru">Guru</string>
    <string name="tambah_kelas">Tambah kelas</string>
    <string name="tambah_data">tambah data</string>
    <string name="delete_user">Delete User</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="role">Role</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="password_baru">Password Baru</string>
    <string name="nama_kelas">Nama Kelas</string>
    <string name="wali_kelas">Wali Kelas</string>
    <string-array name="value_items">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="category">
        <item>Ibadah</item>
        <item>Kedisiplinan</item>
        <item>Membantu Orang Tua</item>
    </string-array>
    <string-array name="classes">
        <item>VII Abu Bakar</item>
        <item>VIII Umar</item>
        <item>IX Utsman</item>
    </string-array>
    <string-array name="roles_array">
        <item>STUDENT</item>
        <item>TEACHER</item>
        <item>ADMINISTRATOR</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="greeting_format">Assalamualaikum, %1$s</string>
</resources>