<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.AddQuestionActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/buat_target_capaian"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/question_category_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kategori_capaian_tx"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"/>

    <Spinner
        android:id="@+id/category_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/question_category_tx"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:entries="@array/category"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_category_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_kategori"
        app:icon="@drawable/outline_add"
        android:clickable="true"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintTop_toBottomOf="@id/question_category_tx"
        app:layout_constraintStart_toEndOf="@id/category_sp"/>

    <EditText
        android:id="@+id/question_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_shape_outline"
        android:focusableInTouchMode="true"
        android:padding="12dp"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:inputType="text"
        android:hint="@string/pertanyaan"
        app:layout_constraintTop_toBottomOf="@id/category_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/question_class_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capaian_untuk_kelas"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_et"/>

    <Spinner
        android:id="@+id/class_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/question_class_tx"
        android:layout_marginTop="10dp"
        android:entries="@array/classes"/>

    <TextView
        android:id="@+id/answer_type_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_jawaban"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/class_sp"/>

    <RadioButton
        android:id="@+id/checklist_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ceklis"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/answer_type_tx"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioButton
        android:id="@+id/free_text_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teks"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@id/answer_type_tx"
        app:layout_constraintStart_toEndOf="@id/checklist_rb"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:clickable="true"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/simpan"
        app:layout_constraintTop_toBottomOf="@id/checklist_rb"/>
</androidx.constraintlayout.widget.ConstraintLayout>
