<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.DetailStudentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/greeting_detail_student_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laporan_ananda_ichwan_sholihin"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/report_month_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/juli_2025"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/greeting_detail_student_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/pekan1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pekan_1"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="7dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/unselected_card_bg"
            app:layout_constraintTop_toBottomOf="@id/report_month_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/pekan4_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pekan_4"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="7dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/unselected_card_bg"
            app:layout_constraintTop_toBottomOf="@id/report_month_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/pekan2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pekan_2"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="7dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/unselected_card_bg"
            app:layout_constraintTop_toBottomOf="@id/report_month_tv"
            app:layout_constraintStart_toEndOf="@id/pekan1_tv"
            app:layout_constraintEnd_toStartOf="@id/pekan3_tv"/>

        <TextView
            android:id="@+id/pekan3_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pekan_3"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="7dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/unselected_card_bg"
            app:layout_constraintTop_toBottomOf="@id/report_month_tv"
            app:layout_constraintEnd_toStartOf="@id/pekan4_tv"
            app:layout_constraintStart_toEndOf="@id/pekan2_tv"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_value_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/materialCardViewElevatedStyle"
            app:cardElevation="12dp"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/pekan1_tv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/add_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penilaian_pekan_ini"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/final_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/a"
                    android:padding="8dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_shape_rounded"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/report_weekly_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/item_report_weekly"
            app:layout_constraintTop_toBottomOf="@id/add_value_cv"/>

        <TextView
            android:id="@+id/previous_report_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:text="@string/lihat_laporan_sebelumnya"
            app:layout_constraintTop_toBottomOf="@id/report_weekly_rv"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>