<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/id_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shape_outline"
            android:focusableInTouchMode="true"
            android:inputType="numberSigned"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:autofillHints="creditCardNumber"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/nisn_nip"
            app:layout_constraintTop_toBottomOf="@id/logo_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shape_outline"
            android:focusableInTouchMode="true"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/id_number_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/login"
            android:clickable="true"
            android:fontFamily="@font/montserrat_semibold"
            app:layout_constraintTop_toBottomOf="@id/password_et"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="@string/register"
            android:clickable="true"
            android:fontFamily="@font/montserrat_semibold"
            app:layout_constraintTop_toBottomOf="@id/login_btn"/>

        <TextView
            android:id="@+id/forgot_pw_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/register_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>